syntax = "proto3";

package users;

option go_package = "./pb";

service UserService {
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse) {}
}

message GetUsersRequest {
  string name = 1;
}

message GetUsersResponse {
  repeated User users = 1;
}

message User {
  string name = 1;
  string email = 2;
}